fix: eslint 自动加引号问题

--- a/html/template/index.html
+++ b/html/template/index.html
@@ -29,7 +29,7 @@
   <ul class="am-list confirm-list" id="doc-modal-list">
     <% if (list) { %> <% _.each(list, function(item, index){%>
     <li>
-      <a data-id="<%" ="index%"> href="#"><%=item %></a
+      <a href="#" data-id="<%" ="index%"> ><%=item %></a
       ><i class="am-icon-close"></i>
     </li>
     <%})%> <% } %>
